SERVER-78036 Handle the race between the getting and setting of the LogicalTimeValidator during sharding initialization